--- a/Laboratorio/angular.json
+++ b/Laboratorio/angular.json
@@ -30,9 +30,15 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "./node_modules/datatables.net-dt/css/jquery.dataTables.css",
+                            "./node_modules/datatables.net-responsive-dt/css/responsive.dataTables.css",
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "./node_modules/jquery/dist/jquery.js",
+                            "./node_modules/datatables.net/js/jquery.dataTables.js",
+                            "./node_modules/datatables.net-responsive/js/dataTables.responsive.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
